# DiffOT

./: .gitignore  pyproject.toml
notebooks/: 2D_3D_EXP.ipynb  Celeba_plotting.ipynb  DiffOT_Image_experiments.ipynb  DiffOT_Image_experiments_adapt.ipynb  DiffOT_Image_experiments_fix.ipynb  DiffOT_Image_experiments_normal.ipynb  DiffOT_Toy_experiments.ipynb  Discrete_OT.ipynb  High_dimensionsal_gaussians.ipynb  Image_Domain_Exp.ipynb  MNIST_plotting.ipynb  O_half_Image_experiments.ipynb  test.ipynb  test_diffot_image.ipynb  train_classifier.ipynb
notebooks/test/: test_diffot_image.ipynb
src/: cunet.py  distributions.py  enot.py  fid_score.py  guided_samplers.py  improved_diffusion.py  inception.py  mnistm_utils.py  new_enot.py  new_plotters.py  nn.py  plotters.py  resnet2.py  resnet_generator.py  tools.py  tools_paired.py
stats/: compute_stats.ipynb
