[project]
name = "DiffOT"
version = "0.1.0"
description = ""
authors = [{ name = "Yingzhen Zhang", email = "yingzhenzhang@njust.edu.cn" }]
dependencies = [
    "torch>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    "pillow>=10.3.0",
    "torchvision>=0.17.2",
    "lightning>=2.2.2",
    "tqdm>=4.66.2",
    "matplotlib>=3.8.4",
    "pandas>=2.2.2",
    "h5py>=3.11.0",
    "ipython>=8.23.0",
    "pot>=0.9.3",
    "wandb>=0.16.6",
    "diffusers>=0.27.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "notebook>=7.1.3",
    "ipywidgets>=8.1.2",
    "jupyterlab>=4.1.8",
    "gdown>=5.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/diffot"]
