[project]
name = "DiffOT"
version = "0.1.0"
description = ""
authors = [{ name = "Yingzhen Zhang", email = "yingzhenzhang@njust.edu.cn" }]
dependencies = [
    "scipy>=1.13.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.2",
    "pillow>=10.2.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.64.1",
    "pandas>=2.2.2",
    "pot>=0.9.3",
    "lightning>=2.2.4",
    "h5py>=3.11.0",
    "diffusers>=0.27.2",
    "torch==2.3.0+cu121",
    "torchvision==0.18.0+cu121",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.0",
    "notebook>=7.2.0",
    "ipywidgets>=8.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/diffot"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
